Fix clean list mixin spacing

--- a/services/drupal/web/themes/epa_theme/source/_patterns/00-config/01-mixins/_mixins.list.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/00-config/01-mixins/_mixins.list.scss
@@ -6,6 +6,10 @@
   margin: 0;
   padding: 0;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   li {
     margin: 0;
     padding-left: 0;
